src/main/jkube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/scm-url: https://testprep.sageisinc.com/com.sageisinc/testprep
    jkube.io/issue-system: Redmine
    jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/testprep/issues
    jkube.io/scm-tag: head
  labels:
    app: testprep
    provider: jkube
    version: 1.0-SNAPSHOT
    group: com.sageisinc
  name: testprep
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: testprep
      provider: jkube
      group: com.sageisinc
  template:
    metadata:
      annotations:
        jkube.io/scm-url: https://testprep.sageisinc.com/com.sageisinc/testprep
        jkube.io/issue-system: Redmine
        jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/testprep/issues
        jkube.io/scm-tag: head
      labels:
        app: testprep
        provider: jkube
        version: 1.0-SNAPSHOT
        group: com.sageisinc
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: testprep.sageisinc.com:5050/com.sageisinc/testprep:latest
        imagePullPolicy: Always
        name: deploy-testprep
        securityContext:
          privileged: false
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: testprep
